[workspace]
members = ["nanoda", "chase_seq"]
default-members = ["nanoda"]
resolver = "2"
package.authors = ["チセ <123655015+chise0713@users.noreply.github.com>"]
package.repository = "https://github.com/chise0713/nanoda"
package.readme = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
