[package]
name = "chase_seq"
# Change here and in lib.rs when releasing
version = "0.2.0"
edition = "2024"
authors.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
description = "A pointer chase benchmark library, providing utilities to create and run chase sequences."
categories = []
keywords = ["benchmarking", "memory-latency", "pointer-chasing"]
readme = true

[lib]
name = "chase_seq"
path = "src/lib.rs"

[dependencies]
quanta = "0.12"
rand_xoshiro = "0.7"
rand_core = "0.9"
rand_seeder = "0.4"
thiserror = "2.0"
